--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <body>
     <nav>
       <a href="#/">主页</a>
-      <a href="#/html">Html</a>
+      <a href="#/html">HTML</a>
+      <a href="#/git">Git</a>
     </nav>
 
     <div id="app"></div>
