--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <a href="#/">主页</a>
       <a href="#/html">HTML</a>
       <a href="#/git">Git</a>
+      <a href="#/css/css">css</a>
     </nav>
 
     <div id="app"></div>
