--- a/index.html
+++ b/index.html
@@ -24,22 +24,30 @@
       <a href="#/">主页</a>
       <a href="#/html">HTML</a>
       <a href="#/git">Git</a>
-      <a href="#/css/css">css</a>
+      <a href="#/css">CSS</a>
     </nav>
 
     <div id="app"></div>
     <script>
       window.$docsify = {
-        search: "auto", // default
-        subMaxLevel: 2,
+        subMaxLevel: 6,
         loadSidebar: true,
         coverpage: false,
         name: "Zealot",
         repo: "",
+        search: {
+          maxAge: 86400000, // Expiration time, the default one day
+          paths: ['/html','/'], // or 'auto'
+          placeholder: "Type to search",
+          noData: "无结果!",
+          depth: 2,
+          hideOtherSidebarContent: true, // whether or not to hide other sidebar content
+        },
       };
     </script>
     <!-- Docsify v4 -->
     <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
   </body>
 </html>
