--- a/index.html
+++ b/index.html
@@ -2,29 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>Notes</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
     />
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/sidebar.min.css" />
+    <link
+      rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css"
+      title="docsify-darklight-theme"
+      type="text/css"
+    />
 
-    <link
-      rel="stylesheet"
-      href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css"
-    />
-    <link
-      rel="stylesheet"
-      href="//cdn.jsdelivr.net/npm/docsify/lib/themes/buble.css"
-    />
   </head>
   <body>
     <nav>
       <a href="#/">主页</a>
-      <a href="#/html">HTML</a>
-      <a href="#/git">Git</a>
-      <a href="#/css">CSS</a>
+      <a href="#/html/html">HTML</a>
+      <a href="#/css/css">CSS</a>
+      <a href="#/react/react">React</a>
     </nav>
 
     <div id="app"></div>
@@ -32,22 +31,29 @@
       window.$docsify = {
         subMaxLevel: 6,
         loadSidebar: true,
-        coverpage: false,
+        coverpage: true,
+        logo: "/assets/logo.svg",
+
         name: "Zealot",
-        repo: "",
+        repo: "https://github.com/ZealotWang-sudo/",
         search: {
           maxAge: 86400000, // Expiration time, the default one day
-          paths: ['/html','/'], // or 'auto'
-          placeholder: "Type to search",
+          paths: ["/", "/html/html", "/css/css","/react/react"], // or 'auto'
+          placeholder: "搜索",
           noData: "无结果!",
-          depth: 2,
+          depth: 6,
           hideOtherSidebarContent: true, // whether or not to hide other sidebar content
         },
       };
     </script>
     <!-- Docsify v4 -->
     <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-
+    <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
+    <script
+      src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js"
+      type="text/javascript"
+    ></script>
   </body>
 </html>
